--- a/themes/default.tinylog.css
+++ b/themes/default.tinylog.css
@@ -1,7 +1,7 @@
 .tinylog-container {
 	z-index: 10000;
 	position: fixed;
-	bottom: 0px;
+	bottom: 0;
 	width: 100%;
 	height: 15%;
 	font-family: sans-serif;
@@ -24,8 +24,7 @@
 .tinylog-entry-text {
 	white-space: pre-wrap;
 	font-size: 12px;
-	margin-left: 5px;
-	margin-right: 5px;
+	margin: 1px 5px 0 5px;
 	max-width: 100%;
 	overflow: auto;
 }
@@ -40,10 +39,8 @@
 .tinylog-buttons-container {
 	position: absolute;
 	opacity: .35;
-	top: 0px;
-	right: 15px;
-	border: 1px solid black;
-	border-top: none;
+	top: 2px;
+	right: 18px;
 }
 
 .tinylog-buttons-container:hover {
@@ -53,12 +50,22 @@
 .tinylog-button {
 	cursor: pointer;
 	display: inline-block;
-	font-weight: bold;
+	color: white;
+	border: 1px solid #ccc;
+	background-color: #ccc;
 	text-align: center;
-	padding: 1px 5px;
+	padding: 6px;
+	padding-top: 2px;
+	-moz-border-radius: 4px;
+	border-radius: 4px;
+	font-size: 14px;
+	width: 12px;
+	height: 12px;
 }
 
 .tinylog-button:hover {
+	border: 1px solid #999;
+	background-color: #eee;
 	color: #222;
 }
 
@@ -67,46 +74,17 @@
 }
 
 .tinylog-button:not(:first-child) {
-	border-left: 1px solid black;
-}
-
-.tinylog-close-button {
-	background-color: #eb0000;
-	background-image: -webkit-gradient(linear, left top, left bottom, from(red), to(#900));
-	background-image: -moz-linear-gradient(-90deg, #f00, #900);
-	background-image: linear-gradient(-90deg, #f00, #900);
-}
-
-.tinylog-close-button:hover {
-	background-color: red;
-	background-image: -webkit-gradient(linear, left top, left bottom, from(#f44), to(red));
-	background-image: -moz-linear-gradient(-90deg, #f44, red);
-	background-image: linear-gradient(-90deg, #f44, red);
-}
-
-.tinylog-save-button-image {
-	position: absolute;
-	top: 0px;
-	left: 0px;
-	width: 100%;
-	height: 100%;
-}
-
-.tinylog-save-button:before {
-	color: white;
+	margin-left: 3px;
 }
 
 .tinylog-save-button {
 	position: relative;
-	background-color: blue;
-	background-image: -webkit-gradient(linear, left top, left bottom, from(blue), to(#006));
-	background-image: -moz-linear-gradient(-90deg, blue, #006);
-	background-image: linear-gradient(-90deg, blue, #006);
 }
 
-.tinylog-save-button:hover {
-	background-color: #143cdc;
-	background-image: -webkit-gradient(linear, left top, left bottom, from(#33f), to(blue));
-	background-image: -moz-linear-gradient(-90deg, #33f, blue);
-	background-image: linear-gradient(-90deg, #33f, blue);
+.tinylog-save-button-image {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
 }
