--- a/themes/default.tinylog.css
+++ b/themes/default.tinylog.css
@@ -3,7 +3,7 @@
 	position: fixed;
 	bottom: 0;
 	width: 100%;
-	height: 15%;
+	height: 200px;
 	font-family: sans-serif;
 	color: black;
 	background-color: white;
@@ -79,6 +79,7 @@
 
 .tinylog-save-button {
 	position: relative;
+	text-decoration: none;
 }
 
 .tinylog-save-button-image {
@@ -87,4 +88,5 @@
 	left: 0;
 	width: 100%;
 	height: 100%;
+	border: none;
 }
